-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.1
-
None
-
Kubuntu 14.04 LTS, Windows7 64bit
-
d296ebfe6585010a38db0e3043ef5ceaa6a30883
When selecting text inside a TextArea, sometimes part of the selected text is rendered as a blue rectangle only.
This seems to be only the case if you select text across table cell boundaries.
This bug occurs on Linux and Windows
To reproduce, load the following html code into a textarea and press ctrl+a
<?xml version="1.0" encoding="UTF-8" ?> <html xmlns="http://www.w3.org/1999/xhtml"> <body > <table > <tr > <td > 123 </td> </tr> <tr > <td > <p >123456</p> </td> </tr> <tr > <td > 12345 </td> </tr> </table> </body> </html>
For Gerrit Dashboard: QTBUG-46928 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
122335,2 | Fix selections in tables that span over several cells | 5.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |